--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,26 +7,224 @@
     tools:context=".MainActivity">
 
     <Button
-        android:id="@+id/button"
-        android:layout_width="113dp"
-        android:layout_height="53dp"
-        android:background="#454545"
-        android:text="@string/roll"
+        android:id="@+id/buttonPI"
+        android:layout_width="79dp"
+        android:layout_height="68dp"
+        android:layout_marginTop="384dp"
+        android:layout_marginEnd="12dp"
+        android:text="="
+        app:layout_constraintEnd_toStartOf="@+id/buttonac"
+        app:layout_constraintTop_toBottomOf="@+id/textfield" />
+
+    <Button
+        android:id="@+id/button0"
+        android:layout_width="79dp"
+        android:layout_height="68dp"
+        android:layout_marginTop="384dp"
+        android:text="0"
+        app:layout_constraintEnd_toStartOf="@+id/buttondel"
+        app:layout_constraintHorizontal_bias="0.743"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textfield" />
+
+    <Button
+        android:id="@+id/buttondot"
+        android:layout_width="79dp"
+        android:layout_height="68dp"
+        android:layout_marginTop="384dp"
+        android:layout_marginEnd="16dp"
+        android:text=","
+        app:layout_constraintEnd_toStartOf="@+id/buttonans"
+        app:layout_constraintTop_toBottomOf="@+id/textfield" />
+
+    <Button
+        android:id="@+id/buttondiv"
+        android:layout_width="79dp"
+        android:layout_height="68dp"
+        android:layout_marginTop="384dp"
+        android:layout_marginEnd="28dp"
+        android:text="/"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textfield" />
+
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="79dp"
+        android:layout_height="68dp"
+        android:layout_marginTop="296dp"
+        android:layout_marginEnd="12dp"
+        android:text="3"
+        app:layout_constraintEnd_toStartOf="@+id/buttonac"
+        app:layout_constraintTop_toBottomOf="@+id/textfield" />
+
+    <Button
+        android:id="@+id/button1"
+        android:layout_width="79dp"
+        android:layout_height="68dp"
+        android:layout_marginTop="296dp"
+        android:text="1"
+        app:layout_constraintEnd_toStartOf="@+id/buttondel"
+        app:layout_constraintHorizontal_bias="0.743"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textfield" />
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="79dp"
+        android:layout_height="68dp"
+        android:layout_marginTop="296dp"
+        android:layout_marginEnd="16dp"
+        android:text="2"
+        app:layout_constraintEnd_toStartOf="@+id/buttonans"
+        app:layout_constraintTop_toBottomOf="@+id/textfield" />
+
+    <Button
+        android:id="@+id/buttonadd"
+        android:layout_width="79dp"
+        android:layout_height="68dp"
+        android:layout_marginTop="296dp"
+        android:layout_marginEnd="28dp"
+        android:text="+"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textfield" />
+
+    <Button
+        android:id="@+id/button6"
+        android:layout_width="79dp"
+        android:layout_height="68dp"
+        android:layout_marginTop="208dp"
+        android:layout_marginEnd="12dp"
+        android:text="6"
+        app:layout_constraintEnd_toStartOf="@+id/buttonac"
+        app:layout_constraintTop_toBottomOf="@+id/textfield" />
+
+    <Button
+        android:id="@+id/button4"
+        android:layout_width="79dp"
+        android:layout_height="68dp"
+        android:layout_marginTop="208dp"
+        android:text="4"
+        app:layout_constraintEnd_toStartOf="@+id/buttondel"
+        app:layout_constraintHorizontal_bias="0.743"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textfield" />
+
+    <Button
+        android:id="@+id/button5"
+        android:layout_width="79dp"
+        android:layout_height="68dp"
+        android:layout_marginTop="208dp"
+        android:layout_marginEnd="16dp"
+        android:text="5"
+        app:layout_constraintEnd_toStartOf="@+id/buttonans"
+        app:layout_constraintTop_toBottomOf="@+id/textfield" />
+
+    <Button
+        android:id="@+id/buttonminus"
+        android:layout_width="79dp"
+        android:layout_height="68dp"
+        android:layout_marginTop="208dp"
+        android:layout_marginEnd="28dp"
+        android:text="-"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textfield" />
+
+    <Button
+        android:id="@+id/button9"
+        android:layout_width="79dp"
+        android:layout_height="68dp"
+        android:layout_marginTop="132dp"
+        android:layout_marginEnd="12dp"
+        android:text="9"
+        app:layout_constraintEnd_toStartOf="@+id/buttonac"
+        app:layout_constraintTop_toBottomOf="@+id/textfield" />
+
+    <Button
+        android:id="@+id/button7"
+        android:layout_width="79dp"
+        android:layout_height="68dp"
+        android:layout_marginTop="132dp"
+        android:text="7"
+        app:layout_constraintEnd_toStartOf="@+id/buttondel"
+        app:layout_constraintHorizontal_bias="0.743"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textfield" />
+
+    <Button
+        android:id="@+id/button8"
+        android:layout_width="79dp"
+        android:layout_height="68dp"
+        android:layout_marginTop="132dp"
+        android:layout_marginEnd="16dp"
+        android:text="8"
+        app:layout_constraintEnd_toStartOf="@+id/buttonans"
+        app:layout_constraintTop_toBottomOf="@+id/textfield" />
+
+    <Button
+        android:id="@+id/buttonmul"
+        android:layout_width="79dp"
+        android:layout_height="68dp"
+        android:layout_marginTop="132dp"
+        android:layout_marginEnd="28dp"
+        android:text="*"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textfield" />
+
+    <TextView
+        android:id="@+id/textfield"
+        android:layout_width="350dp"
+        android:layout_height="71dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:textAlignment="textEnd"
+        android:textSize="48sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.54"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:strokeColor="#353535" />
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@+id/button"
+        app:layout_constraintVertical_bias="0.077"
+        tools:text="0" />
+
+    <Button
+        android:id="@+id/buttonsqrt"
+        android:layout_width="79dp"
+        android:layout_height="68dp"
+        android:layout_marginTop="44dp"
+        android:text="SQRT"
+        app:layout_constraintEnd_toStartOf="@+id/buttondel"
+        app:layout_constraintHorizontal_bias="0.717"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textfield" />
+
+    <Button
+        android:id="@+id/buttondel"
+        android:layout_width="79dp"
+        android:layout_height="68dp"
+        android:layout_marginTop="44dp"
+        android:layout_marginEnd="16dp"
+        android:text="DEL"
+        app:layout_constraintEnd_toStartOf="@+id/buttonans"
+        app:layout_constraintTop_toBottomOf="@+id/textfield" />
+
+    <Button
+        android:id="@+id/buttonans"
+        android:layout_width="79dp"
+        android:layout_height="68dp"
+        android:layout_marginTop="44dp"
+        android:layout_marginEnd="12dp"
+        android:text="ANS"
+        app:layout_constraintEnd_toStartOf="@+id/buttonac"
+        app:layout_constraintTop_toBottomOf="@+id/textfield" />
+
+    <Button
+        android:id="@+id/buttonac"
+        android:layout_width="79dp"
+        android:layout_height="68dp"
+        android:layout_marginTop="44dp"
+        android:layout_marginEnd="28dp"
+        android:text="AC"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.865"
-        app:srcCompat="@drawable/dice_1" />
+        app:layout_constraintTop_toBottomOf="@+id/textfield" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
